# overwatch-obj-detection

./: .env.example  .gitignore  CLAUDE.md  README.md  detect.py  detect_yoloe.py  detect_yoloe_c4isr.py  overwatch.py  pyproject.toml  test.sh
demos/: detect.py  detect_rtdetr.py  detect_sam3.py  detect_yoloe_c4isr.py
docs/: DETECTION_PAYLOAD_STANDARD.md
src/: __init__.py  overwatch.py
src/config/: __init__.py  defaults.py  models.py  threats.py
src/services/: __init__.py  tracking_id.py
src/services/communication/: __init__.py  publisher.py  service.py
src/services/detection/: __init__.py  base.py  factory.py  moondream.py  rtdetr.py  sam2.py  yoloe.py  yoloe_c4isr.py
src/services/tracking/: __init__.py  service.py  state.py
src/services/video/: __init__.py  service.py
src/utils/: __init__.py  args.py  constellation.py  device.py  h264_encoder.py  logging.py  signals.py
tests/: ffmpeg-frames.sh  test_overwatch.py
utils/: camera_diagnostics.py
